# climval

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
climval/: __init__.py  cli.py
climval/core/: __init__.py  loader.py  report.py  suite.py
climval/metrics/: __init__.py  stats.py
climval/models/: __init__.py  schema.py
examples/: basic_comparison.py  cmip6_taylor_diagram.ipynb
tests/: test_benchmark.py
