[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climval"
version = "0.1.0"
description = "Climate model validation and benchmarking framework"
authors = [{ name = "Northflow Technologies", email = "open@northflow.tech" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "climate", "validation", "benchmarking", "CMIP6", "ERA5",
    "reanalysis", "atmospheric science", "earth system model",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
netcdf = ["xarray>=2023.1", "netCDF4>=1.6"]
viz    = ["matplotlib>=3.7", "cartopy>=0.21"]
dev    = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
]
all = ["climval[netcdf,viz,dev]"]

[project.scripts]
climval = "climval.cli:main"

[project.urls]
Homepage    = "https://github.com/northflow-technologies/climval"
Issues      = "https://github.com/northflow-technologies/climval/issues"
Changelog   = "https://github.com/northflow-technologies/climval/blob/main/CHANGELOG.md"
Organisation = "https://northflow.tech"

[tool.setuptools.packages.find]
where = ["."]
include = ["climval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "UP", "ANN", "BLE", "B"]
ignore  = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.10"
strict         = true
ignore_missing_imports = true
